--- a/k8s/petclinic_chart/Chart.yaml
+++ b/k8s/petclinic_chart/Chart.yaml
@@ -21,4 +21,4 @@ version: HELM_VERSION
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.1.0"
+appVersion: 2.1.2
